--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,6 +6,10 @@
   font-family: "Rajdhani", sans-serif;
 }
 
+body {
+  background-color: #11141d;
+}
+
 .swiper {
   width: 100%;
   height: 100%;
@@ -14,7 +18,7 @@
 .swiper-slide {
   text-align: center;
   font-size: 18px;
-  background: #fff;
+  background: #11141d;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -29,7 +33,7 @@
   /* width: 200px; */
   /* height: 100%; */
   /* background-color: red; */
-  background: rgba(0, 0, 0, 0.5);
+  /* background: rgba(0, 0, 0, 0.5); */
 }
 
 .swiper-slide img {
