--- a/client/src/App.css
+++ b/client/src/App.css
@@ -36,12 +36,12 @@ body {
   /* background: rgba(0, 0, 0, 0.5); */
 }
 
-.swiper-slide img {
+/* .swiper-slide img {
   display: block;
   width: 100%;
   height: 100%;
   object-fit: cover;
-}
+} */
 
 .swiper-button-next::before,
 .swiper-button-prev::before {
