register, login API and dashboard crud with seeder, added content, make single game static page

--- a/code/client/src/App.css
+++ b/code/client/src/App.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  /* background-color: #11141d; */
+  background-color: #11141d;
 }
 
 .swiper {
@@ -21,7 +21,8 @@ body {
   background: #11141d;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: start;
+  height: fit-content;
 }
 
 .swiper--overlay {
