--- a/code/client/src/App.css
+++ b/code/client/src/App.css
@@ -25,25 +25,6 @@ body {
   height: fit-content;
 }
 
-.swiper--overlay {
-  content: "";
-  /* display: inline-block; */
-  /* position: absolute; */
-  top: 0;
-  left: 0;
-  /* width: 200px; */
-  /* height: 100%; */
-  /* background-color: red; */
-  /* background: rgba(0, 0, 0, 0.5); */
-}
-
-/* .swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-} */
-
 .swiper-button-next::before,
 .swiper-button-prev::before {
   content: "";
@@ -98,6 +79,8 @@ body {
   z-index: 1000;
 }
 
-* {
+*,
+body,
+html {
   transition: all 0.3s ease-in-out;
 }
